--- a/html_code.html
+++ b/html_code.html
@@ -2,8 +2,7 @@
 <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 <link rel="manifest" href="/site.webmanifest">
-<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#568203">
-<meta name="apple-mobile-web-app-title" content="Shan Jiang">
-<meta name="application-name" content="Shan Jiang">
-<meta name="msapplication-TileColor" content="#ffffff">
+<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#3c5a99">
+<meta name="msapplication-TileColor" content="#3c5a99">
 <meta name="theme-color" content="#ffffff">
+
