--- a/html_code.html
+++ b/html_code.html
@@ -3,6 +3,6 @@
 <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 <link rel="manifest" href="/site.webmanifest">
 <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#3c5a99">
-<meta name="msapplication-TileColor" content="#3c5a99">
+<meta name="msapplication-TileColor" content="#ffffff">
 <meta name="theme-color" content="#ffffff">
 
